k8s_deployment/nginx_ingress_ssl/app-tls.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: amitsaha/webapp-demo:golang-tls
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webappsvc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp
