k8s_deployment/nginx_ingress_ssl/nginx-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: test/nginx
        ports:
        - containerPort: 80
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: nginxsvc1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
